@@ -13,6 +13,7 @@ Change log 1.4 (under development)
 * Basic support for TestNG (5.11) implemented.
 * Fixed so that Whitebox#invokeMethod now works for overridden methods.
 * Implemented findResource in classloader (issue 143), this means that you should be able to locate resources in classpath.
+* JUnit runner and TestNG oject factory now clears MockRepository state upon instantiation. This is useful in cases where a previous test has used e.g. PowerMock#createMock(..) to create a mock without using the runner/factory which means that there would be some state left in the MockRepository that hasn't been cleared.
 
 Change log 1.3.1 (released 2009-10-28)
 --------------------------------------
